ZCS-11605 delegated admin changes - added certificatesView component - Added translation for label

--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -2424,6 +2424,7 @@ UI_Comp_AccountsAliasesTab = Vista de compte, p\u00e0gina \u00c0lies
 UI_Comp_AccountsSkinsTab = Vista de compte, p\u00e0gina Temes
 UI_Comp_AccountsZimletsTab = Vista de compte, p\u00e0gina Zimlets
 UI_Comp_DownloadsView = Vista de desc\u00e0rregues
+UI_Comp_CertificatesView = Vista de certificats
 
 UI_Comp_DLMembersTab = Vista de llista de distribuci\u00f3, p\u00e0gina Membres
 UI_Comp_DLAliasTab = Vista de llista de distribuci\u00f3, p\u00e0gina \u00c0lies
