--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -2358,6 +2358,7 @@ UI_Comp_AccountsAliasesTab = Kontovisning, Aliasser-side
 UI_Comp_AccountsSkinsTab = Kontovisning, Udseende-side
 UI_Comp_AccountsZimletsTab = Kontovisning, Zimlets-side
 UI_Comp_DownloadsView = Download-visning
+UI_Comp_CertificatesView = Visning af certifikater
 
 UI_Comp_DLMembersTab = Distributionslistevisning, Medlemmer-side
 UI_Comp_DLAliasTab = Distributionslistevisning, Aliasser-side
