--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -2392,6 +2392,7 @@ UI_Comp_AccountsAliasesTab = Account-Ansicht, Seite \u201eAliasnamen\u201c
 UI_Comp_AccountsSkinsTab = Account-Ansicht, Seite \u201eSkins\u201c
 UI_Comp_AccountsZimletsTab = Account-Ansicht, Seite \u201eZimlets\u201c
 UI_Comp_DownloadsView = Downloads-Ansicht
+UI_Comp_CertificatesView = Ansicht Zertifikate
 
 UI_Comp_DLMembersTab = Verteileransicht, Seite \u201eMitglieder\u201c
 UI_Comp_DLAliasTab = Verteileransicht, Seite \u201eAliasnamen\u201c
