--- a/WebRoot/messages/ZaMsg_en_AU.properties
+++ b/WebRoot/messages/ZaMsg_en_AU.properties
@@ -2416,6 +2416,7 @@ UI_Comp_AccountsAliasesTab = Account View, Aliases Page
 UI_Comp_AccountsSkinsTab = Account View, Skins Page
 UI_Comp_AccountsZimletsTab = Account View, Zimlets Page
 UI_Comp_DownloadsView = Downloads View
+UI_Comp_CertificatesView = Certificates View
 
 UI_Comp_DLMembersTab = Distribution List View, Members Page
 UI_Comp_DLAliasTab = Distribution List View, Aliases Page
