--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -2402,6 +2402,7 @@ UI_Comp_AccountsAliasesTab = Vista de cuenta, p\u00e1gina de alias
 UI_Comp_AccountsSkinsTab = Vista de cuenta, p\u00e1gina de fondos
 UI_Comp_AccountsZimletsTab = Vista de cuenta, p\u00e1gina de zimlets
 UI_Comp_DownloadsView = Vista de descargas
+UI_Comp_CertificatesView = Vista de certificados
 
 UI_Comp_DLMembersTab = Vista de lista de correo, p\u00e1gina de miembros
 UI_Comp_DLAliasTab = Vista de lista de correo, p\u00e1gina de alias
