--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -2419,6 +2419,7 @@ UI_Comp_AccountsAliasesTab = Kontu-ikuspegia, ezizen-orria
 UI_Comp_AccountsSkinsTab = Kontu-ikuspegia, atzeko planoen orria
 UI_Comp_AccountsZimletsTab = Kontu-ikuspegia, zimleten orria
 UI_Comp_DownloadsView = Deskargen bista
+UI_Comp_CertificatesView = Ziurtagirien ikuspegia
 
 UI_Comp_DLMembersTab = banaketa-zerrendaren ikuspegia, kideen orria
 UI_Comp_DLAliasTab = banaketa-zerrendaren ikuspegia, ezizen-orria
