--- a/WebRoot/messages/ZaMsg_fr.properties
+++ b/WebRoot/messages/ZaMsg_fr.properties
@@ -2403,6 +2403,7 @@ UI_Comp_AccountsAliasesTab = Afficher les d\u00e9tails du compte (onglet Alias)
 UI_Comp_AccountsSkinsTab = Afficher les d\u00e9tails du compte (onglet Skins)
 UI_Comp_AccountsZimletsTab = Afficher les d\u00e9tails du compte (onglet Zimlets)
 UI_Comp_DownloadsView = Vue T\u00e9l\u00e9chargements
+UI_Comp_CertificatesView = Affichage des certificats
 
 UI_Comp_DLMembersTab = Afficher les listes de distribution (onglet Membres)
 UI_Comp_DLAliasTab = Afficher les listes de distribution (onglet Alias)
