--- a/WebRoot/messages/ZaMsg_fr_CA.properties
+++ b/WebRoot/messages/ZaMsg_fr_CA.properties
@@ -2426,6 +2426,7 @@ UI_Comp_AccountsAliasesTab = Affichage des d\u00e9tails du compte, page Alias
 UI_Comp_AccountsSkinsTab = Affichage des d\u00e9tails du compte, page Th\u00e8mes
 UI_Comp_AccountsZimletsTab = Affichage des d\u00e9tails du compte, page Zimlets
 UI_Comp_DownloadsView = Afficher les t\u00e9l\u00e9chargements
+UI_Comp_CertificatesView = Affichage des certificats
 
 UI_Comp_DLMembersTab = Affichage des listes de distribution, page Membres
 UI_Comp_DLAliasTab = Affichage des listes de distribution, page Alias
