--- a/WebRoot/messages/ZaMsg_hu.properties
+++ b/WebRoot/messages/ZaMsg_hu.properties
@@ -2426,6 +2426,7 @@ UI_Comp_AccountsAliasesTab = Fi\u00f3k n\u00e9zet, Aliasok oldal
 UI_Comp_AccountsSkinsTab = Fi\u00f3k n\u00e9zet, Fel\u00fcletek oldal
 UI_Comp_AccountsZimletsTab = Fi\u00f3k n\u00e9zet, Zimletek oldal
 UI_Comp_DownloadsView = Let\u00f6lt\u00e9si n\u00e9zet
+UI_Comp_CertificatesView = Tan\u00fas\u00edtv\u00e1nyok megtekint\u00e9se
 
 UI_Comp_DLMembersTab = Terjeszt\u00e9si lista n\u00e9zet, Tagok oldal
 UI_Comp_DLAliasTab = Terjeszt\u00e9si lista n\u00e9zet, Aliasok oldal
