--- a/WebRoot/messages/ZaMsg_in.properties
+++ b/WebRoot/messages/ZaMsg_in.properties
@@ -2430,6 +2430,7 @@ UI_Comp_AccountsAliasesTab = Tampilan Akun, Halaman Alias
 UI_Comp_AccountsSkinsTab = Tampilan Akun, Halaman Tema
 UI_Comp_AccountsZimletsTab = Tampilan Akun, Halaman Zimlet
 UI_Comp_DownloadsView = Tampilan Unduhan
+UI_Comp_CertificatesView = Tampilan Sertifikat
 
 UI_Comp_DLMembersTab = Tampilan Daftar Distribusi, Halaman Anggota
 UI_Comp_DLAliasTab = Tampilan Daftar Distribusi, Halaman Alias
