--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -2358,6 +2358,7 @@ UI_Comp_AccountsAliasesTab = Vista account, pagina Alias
 UI_Comp_AccountsSkinsTab = Vista account, pagina Motivi
 UI_Comp_AccountsZimletsTab = Vista account, pagina Zimlet
 UI_Comp_DownloadsView = Visualizzazione download
+UI_Comp_CertificatesView = Visualizzazione certificati
 
 UI_Comp_DLMembersTab = Vista lista di distribuzione, pagina Iscritti
 UI_Comp_DLAliasTab = Vista lista di distribuzione, pagina Alias
