--- a/WebRoot/messages/ZaMsg_iw.properties
+++ b/WebRoot/messages/ZaMsg_iw.properties
@@ -2426,6 +2426,7 @@ UI_Comp_AccountsAliasesTab = \u05ea\u05e6\u05d5\u05d2\u05ea \u05d7\u05e9\u05d1\u
 UI_Comp_AccountsSkinsTab = \u05ea\u05e6\u05d5\u05d2\u05ea \u05d7\u05e9\u05d1\u05d5\u05df, \u05d4\u05d3\u05e3 \u2018\u05de\u05e2\u05d8\u05e4\u05d5\u05ea\u2019
 UI_Comp_AccountsZimletsTab = \u05ea\u05e6\u05d5\u05d2\u05ea \u05d7\u05e9\u05d1\u05d5\u05df, \u05d4\u05d3\u05e3 \u2018Zimlets\u2019
 UI_Comp_DownloadsView = \u05ea\u05e6\u05d5\u05d2\u05ea \u05d4\u05d5\u05e8\u05d3\u05d5\u05ea
+UI_Comp_CertificatesView = \u05ea\u05e6\u05d5\u05d2\u05ea \u05ea\u05e2\u05d5\u05d3\u05d5\u05ea
 
 UI_Comp_DLMembersTab = \u05ea\u05e6\u05d5\u05d2\u05ea \u05e8\u05e9\u05d9\u05de\u05ea \u05ea\u05e4\u05d5\u05e6\u05d4, \u05d4\u05d3\u05e3 \u2018\u05d7\u05d1\u05e8\u05d9\u05dd\u2019
 UI_Comp_DLAliasTab = \u05ea\u05e6\u05d5\u05d2\u05ea \u05e8\u05e9\u05d9\u05de\u05ea \u05ea\u05e4\u05d5\u05e6\u05d4, \u05d4\u05d3\u05e3 \u2018\u05db\u05d9\u05e0\u05d5\u05d9\u05d9\u05dd\u2019
