--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -2371,6 +2371,7 @@ UI_Comp_AccountsAliasesTab = \uacc4\uc815 \ubcf4\uae30, \ubcc4\uce6d \ud398\uc77
 UI_Comp_AccountsSkinsTab = \uacc4\uc815 \ubcf4\uae30, \uc2a4\ud0a8 \ud398\uc774\uc9c0
 UI_Comp_AccountsZimletsTab = \uacc4\uc815 \ubcf4\uae30, Zimlet \ud398\uc774\uc9c0
 UI_Comp_DownloadsView = \ub2e4\uc6b4\ub85c\ub4dc \ubcf4\uae30
+UI_Comp_CertificatesView = \uc778\uc99d\uc11c \ubcf4\uae30
 
 UI_Comp_DLMembersTab = \uadf8\ub8f9 \ubcf4\uae30, \uad6c\uc131\uc6d0 \ud398\uc774\uc9c0
 UI_Comp_DLAliasTab = \uadf8\ub8f9 \ubcf4\uae30, \ubcc4\uce6d \ud398\uc774\uc9c0
