--- a/WebRoot/messages/ZaMsg_lo.properties
+++ b/WebRoot/messages/ZaMsg_lo.properties
@@ -2426,7 +2426,7 @@ UI_Comp_AccountsAliasesTab = \u0e81\u0eb2\u0e99\u0ec0\u0e9a\u0eb4\u0ec8\u0e87\u0
 UI_Comp_AccountsSkinsTab = \u0e81\u0eb2\u0e99\u0ec0\u0e9a\u0eb4\u0ec8\u0e87\u0e9a\u0eb1\u0e99\u0e8a\u0eb5, \u0edc\u0ec9\u0eb2\u0eaa\u0eb0\u0e81\u0eb5\u0e99
 UI_Comp_AccountsZimletsTab = \u0e81\u0eb2\u0e99\u0ec0\u0e9a\u0eb4\u0ec8\u0e87\u0e9a\u0eb1\u0e99\u0e8a\u0eb5, \u0edc\u0ec9\u0eb2\u0e8a\u0eb5\u0ea1\u0ec0\u0ea5\u0eb1\u0e94
 UI_Comp_DownloadsView = \u0e81\u0eb2\u0e99\u0ec0\u0e9a\u0eb4\u0ec8\u0e87\u0e81\u0eb2\u0e99\u0e94\u0eb2\u0ea7\u0ec2\u0eab\u0ebc\u0e94
-
+UI_Comp_CertificatesView = \u0ec0\u0e9a\u0eb4\u0ec8\u0e87\u0ec3\u0e9a\u0eae\u0eb1\u0e9a\u0eae\u0ead\u0e87
 UI_Comp_DLMembersTab = \u0e81\u0eb2\u0e99\u0ec0\u0e9a\u0eb4\u0ec8\u0e87\u0ea5\u0eb2\u0e8d\u0e8a\u0eb7\u0ec8\u0e88\u0eb3\u0edc\u0ec8\u0eb2\u0e8d, \u0edc\u0ec9\u0eb2\u0eaa\u0eb0\u0ea1\u0eb2\u0e8a\u0eb4\u0e81
 UI_Comp_DLAliasTab = \u0e81\u0eb2\u0e99\u0ec0\u0e9a\u0eb4\u0ec8\u0e87\u0ea5\u0eb2\u0e8d\u0e8a\u0eb7\u0ec8\u0e88\u0eb3\u0edc\u0ec8\u0eb2\u0e8d, \u0edc\u0ec9\u0eb2\u0e8a\u0eb7\u0ec8\u0e88\u0eb3\u0ea5\u0ead\u0e87
 UI_Comp_DLNotesTab = \u0e81\u0eb2\u0e99\u0ec0\u0e9a\u0eb4\u0ec8\u0e87\u0ea5\u0eb2\u0e8d\u0e8a\u0eb7\u0ec8\u0e88\u0eb3\u0edc\u0ec8\u0eb2\u0e8d, \u0edc\u0ec9\u0eb2\u0e9a\u0eb1\u0e99\u0e97\u0eb6\u0e81
