--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -2426,6 +2426,7 @@ UI_Comp_AccountsAliasesTab = Pandangan Akaun, Halaman Alias
 UI_Comp_AccountsSkinsTab = Pandangan Akaun, Halaman Kulit
 UI_Comp_AccountsZimletsTab = Pandangan Akaun, Halaman Zimlets
 UI_Comp_DownloadsView = Pandangan Muat Turun
+UI_Comp_CertificatesView = Paparan Sijil
 
 UI_Comp_DLMembersTab = Pandangan Senarai Edaran, Halaman Ahli
 UI_Comp_DLAliasTab = Pandangan Senarai Edaran, Halaman Alias
