--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -2358,6 +2358,7 @@ UI_Comp_AccountsAliasesTab = Accountweergave, Aliaspagina
 UI_Comp_AccountsSkinsTab = Accountweergave, Skins-pagina
 UI_Comp_AccountsZimletsTab = Accountweergave, Zimlets-pagina
 UI_Comp_DownloadsView = Downloadweergave
+UI_Comp_CertificatesView = Certificaten bekijken
 
 UI_Comp_DLMembersTab = Distributielijstweergave, Ledenpagina
 UI_Comp_DLAliasTab = Distributielijstweergave, Aliaspagina
