--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -2417,6 +2417,7 @@ UI_Comp_AccountsAliasesTab = Widok kont, strona Aliasy
 UI_Comp_AccountsSkinsTab = Widok kont, strona Sk\u00f3rki
 UI_Comp_AccountsZimletsTab = Widok kont, strona Zimlety
 UI_Comp_DownloadsView = Widok pobranych
+UI_Comp_CertificatesView = Widok certyfikat\u00f3w
 
 UI_Comp_DLMembersTab = Widok listy dystrybucyjnej, strona Cz\u0142onkowie
 UI_Comp_DLAliasTab = Widok listy dystrybucyjnej, strona Aliasy
