--- a/WebRoot/messages/ZaMsg_pt.properties
+++ b/WebRoot/messages/ZaMsg_pt.properties
@@ -2431,6 +2431,7 @@ UI_Comp_AccountsAliasesTab = Vista de conta da p\u00e1gina Nomes alternativos
 UI_Comp_AccountsSkinsTab = Vista de conta da p\u00e1gina M\u00e1scaras
 UI_Comp_AccountsZimletsTab = Vista de conta da p\u00e1gina Zimlets
 UI_Comp_DownloadsView = Vista de descarregamentos
+UI_Comp_CertificatesView = Visualiza\u00e7\u00e3o de certificados
 
 UI_Comp_DLMembersTab = Vista de lista de distribui\u00e7\u00e3o da p\u00e1gina Membros
 UI_Comp_DLAliasTab = Vista de lista de distribui\u00e7\u00e3o da p\u00e1gina Nomes alternativos
