--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -2426,6 +2426,7 @@ UI_Comp_AccountsAliasesTab = Vizualizare cont, pagina Aliasuri
 UI_Comp_AccountsSkinsTab = Vizualizare cont, pagina Fa\u0163ete
 UI_Comp_AccountsZimletsTab = Vizualizare cont, pagina Zimleturi
 UI_Comp_DownloadsView = Vizualizare desc\u0103rc\u0103ri
+UI_Comp_CertificatesView = Vizualizare certificate
 
 UI_Comp_DLMembersTab = Vizualizare list\u0103 de distribu\u0163ie, pagina Membri
 UI_Comp_DLAliasTab = Vizualizare list\u0103 de distribu\u0163ie, pagina Aliasuri
