--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -2426,6 +2426,7 @@ UI_Comp_AccountsAliasesTab = Pogled ra\u010duna, stran Vzdevki
 UI_Comp_AccountsSkinsTab = Pogled ra\u010duna, stran Preobleke
 UI_Comp_AccountsZimletsTab = Pogled ra\u010duna, stran Zimleti
 UI_Comp_DownloadsView = Pogled prenosov
+UI_Comp_CertificatesView = Pogled certifikatov
 
 UI_Comp_DLMembersTab = Pogled distribucijskega seznama, stran \u010clani
 UI_Comp_DLAliasTab = Pogled distribucijskega seznama, stran Vzdevki
