--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -2358,6 +2358,7 @@ UI_Comp_AccountsAliasesTab = Kontovy, sidan Alias
 UI_Comp_AccountsSkinsTab = Kontovy, sidan Skal
 UI_Comp_AccountsZimletsTab = Kontovy, sidan Zimlet-paket
 UI_Comp_DownloadsView = Vyn Nedladdningsbara filer
+UI_Comp_CertificatesView = Certifikatvy
 
 UI_Comp_DLMembersTab = Vy \u00f6ver distributionslistor, sidan Medlemmar
 UI_Comp_DLAliasTab = Vy \u00f6ver distributionslistor, sidan Alias
