--- a/WebRoot/messages/ZaMsg_ta.properties
+++ b/WebRoot/messages/ZaMsg_ta.properties
@@ -2431,6 +2431,7 @@ UI_Comp_AccountsAliasesTab = \u0b95\u0ba3\u0b95\u0bcd\u0b95\u0bbf\u0ba9\u0bcd \u
 UI_Comp_AccountsSkinsTab = \u0b95\u0ba3\u0b95\u0bcd\u0b95\u0bbf\u0ba9\u0bcd \u0b95\u0bbe\u0b9f\u0bcd\u0b9a\u0bbf, \u0ba4\u0bcb\u0bb2\u0bcd \u0baa\u0b95\u0bcd\u0b95\u0bae\u0bcd
 UI_Comp_AccountsZimletsTab = \u0b95\u0ba3\u0b95\u0bcd\u0b95\u0bbf\u0ba9\u0bcd \u0b95\u0bbe\u0b9f\u0bcd\u0b9a\u0bbf, Zimlets \u0baa\u0b95\u0bcd\u0b95\u0bae\u0bcd
 UI_Comp_DownloadsView = \u0baa\u0ba4\u0bbf\u0bb5\u0bbf\u0bb1\u0b95\u0bcd\u0b95\u0b95\u0bcd \u0b95\u0bbe\u0b9f\u0bcd\u0b9a\u0bbf
+UI_Comp_CertificatesView = \u0b9a\u0bbe\u0ba9\u0bcd\u0bb1\u0bbf\u0ba4\u0bb4\u0bcd\u0b95\u0bb3\u0bcd \u0baa\u0bbe\u0bb0\u0bcd\u0bb5\u0bc8
 
 UI_Comp_DLMembersTab = \u0baa\u0b99\u0bcd\u0b95\u0bb3\u0bbf\u0baa\u0bcd\u0baa\u0bbe\u0bb3\u0bb0\u0bcd \u0baa\u0b9f\u0bcd\u0b9f\u0bbf\u0baf\u0bb2\u0bcd \u0b95\u0bbe\u0b9f\u0bcd\u0b9a\u0bbf, \u0b89\u0bb1\u0bc1\u0baa\u0bcd\u0baa\u0bbf\u0ba9\u0bb0\u0bcd\u0b95\u0bb3\u0bbf\u0ba9\u0bcd \u0baa\u0b95\u0bcd\u0b95\u0bae\u0bcd
 UI_Comp_DLAliasTab = \u0baa\u0b99\u0bcd\u0b95\u0bb3\u0bbf\u0baa\u0bcd\u0baa\u0bbe\u0bb3\u0bb0\u0bcd \u0baa\u0b9f\u0bcd\u0b9f\u0bbf\u0baf\u0bb2\u0bcd \u0b95\u0bbe\u0b9f\u0bcd\u0b9a\u0bbf, \u0bae\u0bbe\u0bb1\u0bcd\u0bb1\u0bc1\u0baa\u0bcd \u0baa\u0b95\u0bcd\u0b95\u0bae\u0bcd
