--- a/WebRoot/messages/ZaMsg_th.properties
+++ b/WebRoot/messages/ZaMsg_th.properties
@@ -2424,6 +2424,7 @@ UI_Comp_AccountsAliasesTab = \u0e21\u0e38\u0e21\u0e21\u0e2d\u0e07\u0e1a\u0e31\u0
 UI_Comp_AccountsSkinsTab = \u0e21\u0e38\u0e21\u0e21\u0e2d\u0e07\u0e1a\u0e31\u0e0d\u0e0a\u0e35, \u0e40\u0e1e\u0e08\u0e2a\u0e01\u0e34\u0e19
 UI_Comp_AccountsZimletsTab = \u0e21\u0e38\u0e21\u0e21\u0e2d\u0e07\u0e1a\u0e31\u0e0d\u0e0a\u0e35, \u0e40\u0e1e\u0e08 Zimlets
 UI_Comp_DownloadsView = \u0e21\u0e38\u0e21\u0e21\u0e2d\u0e07\u0e01\u0e32\u0e23\u0e14\u0e32\u0e27\u0e4c\u0e19\u0e42\u0e2b\u0e25\u0e14
+UI_Comp_CertificatesView = \u0e43\u0e1a\u0e23\u0e31\u0e1a\u0e23\u0e2d\u0e07\u0e14\u0e39
 
 UI_Comp_DLMembersTab = \u0e21\u0e38\u0e21\u0e21\u0e2d\u0e07\u0e23\u0e32\u0e22\u0e0a\u0e37\u0e48\u0e2d\u0e01\u0e32\u0e23\u0e41\u0e08\u0e01\u0e08\u0e48\u0e32\u0e22, \u0e40\u0e1e\u0e08\u0e2a\u0e21\u0e32\u0e0a\u0e34\u0e01
 UI_Comp_DLAliasTab = \u0e21\u0e38\u0e21\u0e21\u0e2d\u0e07\u0e23\u0e32\u0e22\u0e0a\u0e37\u0e48\u0e2d\u0e01\u0e32\u0e23\u0e41\u0e08\u0e01\u0e08\u0e48\u0e32\u0e22, \u0e40\u0e1e\u0e08\u0e19\u0e32\u0e21\u0e41\u0e1d\u0e07
