--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -2422,6 +2422,7 @@ UI_Comp_AccountsAliasesTab = Hesap G\u00f6r\u00fcn\u00fcm\u00fc, Takma Adlar Say
 UI_Comp_AccountsSkinsTab = Hesap G\u00f6r\u00fcn\u00fcm\u00fc, D\u0131\u015f G\u00f6r\u00fcn\u00fcm Sayfas\u0131
 UI_Comp_AccountsZimletsTab = Hesap G\u00f6r\u00fcn\u00fcm\u00fc, Zimbra Uygulamac\u0131klar\u0131 Sayfas\u0131
 UI_Comp_DownloadsView = \u0130ndirilenler G\u00f6r\u00fcn\u00fcm\u00fc
+UI_Comp_CertificatesView = Sertifika G\u00f6r\u00fcn\u00fcm\u00fc
 
 UI_Comp_DLMembersTab = Da\u011f\u0131t\u0131m Listesi G\u00f6r\u00fcn\u00fcm\u00fc, \u00dcyeler Sayfas\u0131
 UI_Comp_DLAliasTab = Da\u011f\u0131t\u0131m Listesi G\u00f6r\u00fcn\u00fcm\u00fc, Takma Adlar Sayfas\u0131
