--- a/WebRoot/messages/ZaMsg_vi.properties
+++ b/WebRoot/messages/ZaMsg_vi.properties
@@ -2431,6 +2431,7 @@ UI_Comp_AccountsAliasesTab = Giao di\u1ec7n t\u00e0i kho\u1ea3n, trang B\u00ed d
 UI_Comp_AccountsSkinsTab = Giao di\u1ec7n t\u00e0i kho\u1ea3n, trang Giao di\u1ec7n
 UI_Comp_AccountsZimletsTab = Giao di\u1ec7n t\u00e0i kho\u1ea3n, trang Zimlet
 UI_Comp_DownloadsView = Giao di\u1ec7n t\u1ea3i v\u1ec1
+UI_Comp_CertificatesView = Xem ch\u1ee9ng ch\u1ec9
 
 UI_Comp_DLMembersTab = Giao di\u1ec7n danh s\u00e1ch g\u1eedi th\u01b0, trang Th\u00e0nh vi\u00ean
 UI_Comp_DLAliasTab = Giao di\u1ec7n danh s\u00e1ch g\u1eedi th\u01b0, trang B\u00ed danh
