--- a/WebRoot/messages/ZaMsg_zh_CN.properties
+++ b/WebRoot/messages/ZaMsg_zh_CN.properties
@@ -2413,6 +2413,7 @@ UI_Comp_AccountsAliasesTab = \u5e10\u6237\u4fe1\u606f\u89c6\u56fe\uff0c\u522b\u5
 UI_Comp_AccountsSkinsTab = \u5e10\u6237\u4fe1\u606f\u89c6\u56fe\uff0c\u9762\u677f\u9875\u9762
 UI_Comp_AccountsZimletsTab = \u5e10\u6237\u4fe1\u606f\u89c6\u56fe\uff0cZimlets \u9875\u9762
 UI_Comp_DownloadsView = \u4e0b\u8f7d\u89c6\u56fe
+UI_Comp_CertificatesView = \u8bc1\u4e66\u89c6\u56fe
 
 UI_Comp_DLMembersTab = \u901a\u8baf\u7ec4\u5217\u8868\u89c6\u56fe\uff0c\u4f1a\u5458\u8d44\u6599\u9875\u9762
 UI_Comp_DLAliasTab = \u901a\u8baf\u7ec4\u5217\u8868\u89c6\u56fe\uff0c\u522b\u540d\u9875\u9762
