--- a/WebRoot/messages/ZaMsg_zh_HK.properties
+++ b/WebRoot/messages/ZaMsg_zh_HK.properties
@@ -2371,6 +2371,7 @@ UI_Comp_AccountsAliasesTab = \u5e33\u6236\u8cc7\u8a0a\u8996\u7a97\uff0c\u5225\u5
 UI_Comp_AccountsSkinsTab = \u5e33\u6236\u8cc7\u8a0a\u8996\u7a97\uff0c\u9762\u677f\u9801\u9762
 UI_Comp_AccountsZimletsTab = \u5e33\u6236\u8cc7\u8a0a\u8996\u7a97\uff0cZimlets \u9801\u9762
 UI_Comp_DownloadsView = \u4e0b\u8f09\u6aa2\u8996
+UI_Comp_CertificatesView = \u8b49\u66f8\u8996\u5716
 
 UI_Comp_DLMembersTab = \u5206\u767c\u6e05\u55ae\u8996\u7a97\uff0c\u6703\u54e1\u8cc7\u6599\u9801\u9762
 UI_Comp_DLAliasTab = \u5206\u767c\u6e05\u55ae\u8996\u7a97\uff0c\u5225\u540d\u9801\u9762
