--- a/WebRoot/messages/ZaMsg_hr.properties
+++ b/WebRoot/messages/ZaMsg_hr.properties
@@ -2438,6 +2438,7 @@ UI_Comp_AccountsZimletsTab = Account View, Zimlets Page
 UI_Comp_DownloadsView = Downloads View
 UI_Comp_HelpCenterView = Help Center View
 UI_Comp_StatusPane = Status Pane
+UI_Comp_CertificatesView = Pregled potvrda
 
 UI_Comp_DLMembersTab = Distribution List View, Members Page
 UI_Comp_DLAliasTab = Distribution List View, Aliases Page
