--- a/WebRoot/messages/ZaMsg_no.properties
+++ b/WebRoot/messages/ZaMsg_no.properties
@@ -2431,6 +2431,7 @@ UI_Comp_AccountsAliasesTab = Kontovisning, Aliaser-side
 UI_Comp_AccountsSkinsTab = Kontovisning, Skall-side
 UI_Comp_AccountsZimletsTab = Kontovisning, Zimleter-side
 UI_Comp_DownloadsView = Visning av nedlastinger
+UI_Comp_CertificatesView = Sertifikatvisning
 
 UI_Comp_DLMembersTab = Distribusjonslistevisnsing, Medlemmer-side
 UI_Comp_DLAliasTab = Distribusjonslistevisnsing, Aliaser-side
