--- a/WebRoot/messages/ZaMsg_pt_BR.properties
+++ b/WebRoot/messages/ZaMsg_pt_BR.properties
@@ -2357,6 +2357,7 @@ UI_Comp_AccountsAliasesTab = Visualiza\u00e7\u00e3o da conta, p\u00e1gina Aliase
 UI_Comp_AccountsSkinsTab = Visualiza\u00e7\u00e3o da conta, p\u00e1gina Skins
 UI_Comp_AccountsZimletsTab = Visualiza\u00e7\u00e3o da conta, p\u00e1gina Zimlets
 UI_Comp_DownloadsView = Tela de downloads
+UI_Comp_CertificatesView = Visualiza\u00e7\u00e3o de certificados
 
 UI_Comp_DLMembersTab = Visualiza\u00e7\u00e3o da lista de distribui\u00e7\u00e3o, p\u00e1gina Membros
 UI_Comp_DLAliasTab = Visualiza\u00e7\u00e3o da lista de distribui\u00e7\u00e3o, p\u00e1gina Aliases
