--- a/WebRoot/messages/ZaMsg_zh_TW.properties
+++ b/WebRoot/messages/ZaMsg_zh_TW.properties
@@ -2424,6 +2424,7 @@ UI_Comp_AccountsAliasesTab = \u5e33\u6236\u6aa2\u8996\uff0c\u5225\u540d\u9801\u9
 UI_Comp_AccountsSkinsTab = \u5e33\u6236\u6aa2\u8996\uff0c\u7248\u9762\u9801\u9762
 UI_Comp_AccountsZimletsTab = \u5e33\u6236\u6aa2\u8996\uff0cZimlets \u9801\u9762
 UI_Comp_DownloadsView = \u4e0b\u8f09\u6aa2\u8996
+UI_Comp_CertificatesView = \u8b49\u66f8\u8996\u5716
 
 UI_Comp_DLMembersTab = \u901a\u8a0a\u7fa4\u7d44\u6e05\u55ae\u6aa2\u8996\uff0c\u6210\u54e1\u9801\u9762
 UI_Comp_DLAliasTab = \u901a\u8a0a\u7fa4\u7d44\u6e05\u55ae\u6aa2\u8996\uff0c\u5225\u540d\u9801\u9762
